--- a/styles/animations.css
+++ b/styles/animations.css
@@ -9,3 +9,96 @@
 ✦ button__text — для обозначения текстового элемента внутри кнопки
 
 */
+
+/*работа с сердцем*/
+
+.like-icon {
+  cursor: pointer;
+}
+
+.sparks {
+  opacity: 0;
+}
+
+.core {
+  fill: transparent;
+  transition: fill 0.3s 0.03s;
+}
+
+.card__icon-button:hover .core {
+  fill: var(--color-contour);
+  transition: fill 0.3s;
+}
+
+.card__icon-button:active .core {
+  fill: var(--color-sparks);
+  transition: fill 0.3s;
+}
+
+.like-icon.is-liked .core {
+  fill: var(--color-sparks);
+  transition: fill 0.3s;
+}
+
+.main-body {
+  fill: transparent;
+  transition: fill 0.3s;
+}
+
+.card__icon-button:hover .main-body {
+  fill: var(--color-contour);
+  transition: fill 0.3s 0.05s;
+}
+
+.card__icon-button:active .main-body {
+  fill: var(--color-sparks);
+  transition: fill 0.3s 0.05s;
+}
+
+.like-icon.is-liked .main-body {
+  fill: var(--color-sparks);
+  transition: fill 0.3s 0.05s;
+}
+
+.like-icon.is-liked .contour {
+  fill: var(--color-sparks);
+  transition: fill 0.3s 0.06s;
+}
+
+.heart {
+  display: inline-block;
+}
+
+.is-liked .heart {
+  animation: heart 0.3s ease-in 0.1s;
+}
+
+@keyframes heart {
+  0% {
+    transform: scale(1); 
+  }
+
+  100% {
+    transform: scale(1.25); 
+  }
+}
+
+.is-liked .sparks {
+  animation: sparks 0.3s ease-in 0.3s;
+}
+
+@keyframes sparks {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+.contour {
+  fill: var(--color-contour);
+  transition: fill linear 0.1s;
+}
+
