--- a/styles/style.css
+++ b/styles/style.css
@@ -11,6 +11,370 @@
 */
 
 .page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: var(--font-family-base);
+  background-color: #fff;
+  background-image: var(--background-image);
+  background-size: cover; 
+  background-attachment: fixed;
+  font-variation-settings: 'wdth' 400;
   min-inline-size: 320px;
   min-block-size: 100dvb;
+}
+
+.header {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-top: 100px;
+  margin-bottom: 105px;
+  padding: clamp(7.5rem, 2.105vw + 7.079rem, 8rem) 0px;
+  outline: 2px solid var(--acent-color);
+  text-align: center;
+  background-color: white;
+}
+
+.header__size {
+  inline-size: var(--inline-size);
+}
+
+.header__heading {
+  color: var(--acent-color);
+  font-family: var(--second-family), sans-serif;
+  font-weight: 400;
+  font-size: var(--font-size-logo);
+  text-transform: uppercase;
+  }
+
+  .header__text {
+    color: var(--acent-color);
+    font-family: var(--second-family), sans-serif;
+    font-weight: 400;
+    font-size: var(--font-size-text);
+    text-transform: uppercase;
+  }
+
+  .main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 50px;
+  }
+
+  .post {
+    display: flex;
+    flex-direction: column;
+    outline: 2px solid var(--acent-color);
+    background-color: #fff;
+  }
+
+  .post__size {
+    inline-size: var(--inline-size);
+  }
+
+  .post__title {
+    display: block;
+    border-bottom: 2px solid var(--acent-color);
+    padding: 5px 10px;
+    color: var(--acent-color);
+    font-family: var(--font-family-base);
+    font-size: 18px;
+    font-variation-settings: 'wdth' 700;
+  }
+
+  .image__container {
+    position: relative;
+    outline: 2px solid var(--acent-color);
+  }
+
+  .watermark {
+    position: absolute;
+    top: 25px;
+    right: 25px;
+    z-index: 1;
+    opacity: 0.5;
+    color: var(--acent-color);
+    font-family: var(--second-family);
+    font-weight: 400;
+    font-size: 14px;
+    mix-blend-mode: hard-light;
+    -webkit-text-stroke: 0.5px var(--color-outline-watermark);
+    text-stroke: 0.5px var(--color-outline-watermark);
+  }
+
+  .post__image {
+    display: block;
+    object-fit: cover;
+    block-size: 100%;
+    inline-size: 100%;
+  }
+
+  /*фильтры для картинок*/
+
+  .image__brightness {
+    filter: brightness(150%);
+  }
+
+  .image__contrast {
+    filter: contrast(130%);
+  }
+
+  .image__blur {
+    filter: blur(0.3rem);
+  }
+
+  .image__opacity {
+    filter: opacity(70%);
+  }
+
+  .image__black {
+    filter: grayscale(90%);
+  }
+
+  .image__saturate {
+    filter: saturate(125%) invert(0.9);
+  }
+
+  .image__rotate {
+    filter: hue-rotate(60deg);
+  }
+
+  .image__retro {
+    filter: sepia(85%);
+  }
+
+  .content {
+    border-top: 2px solid var(--acent-color);
+    padding: 25px;
+  }
+
+  .post__text-block { 
+   display: flex;
+   flex-direction: column;
+   gap: 27px;
+   margin-bottom: 25px;
+  }
+
+  .post__text {
+    color: var(--acent-color);
+    font-family: var(--font-family-base);
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 21px;
+  }
+
+  .button_case {
+    display: flex;
+    justify-content: end;
+    /*gap: 6px;*/
+    align-items: center;
+  }
+
+  .like-icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .card__icon-button {
+    position: relative;
+    border: none;
+    background-color: transparent;
+    block-size: 38px;
+  }
+
+  .card__icon-button:focus {
+    outline: none;
+  }
+
+  .card__icon-button:focus-visible {
+    outline: 2px solid var(--acent-color);
+    transition: outline 0.3s ease;
+  }
+
+
+  .button {
+    position: relative;
+    border: none;
+    overflow: hidden;
+    color: var(--acent-color);
+    font-family: var(--second-family);
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 90%;
+    background-color: transparent;
+  }
+
+  .button__text {
+    position: relative;
+    z-index: 1;
+    color: #e7e7e7;
+    mix-blend-mode: difference;
+  }
+
+  .button:focus {
+    border: none;
+  }
+
+  .button:focus-visible {
+    box-shadow: 2px 2px 0px var(--acent-color);
+    transition: box-shadow 0.3s ease;
+  }
+
+  .button::before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    background-color: var(--acent-color); 
+    transition: transform 0.5s ease-in-out;
+    transform: translateX(-100%);
+    inline-size: 100%;
+    block-size: 100%; 
+    
+  }
+
+  .button:hover::before {
+    transform: translateX(0%);  
+  }
+ 
+
+  .card__like-button {
+    border: none;
+    border: 2px solid var(--acent-color);
+    padding: 12.5px 37px;
+    color: var(--acent-color);
+    font-family: var(--second-family);
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 90%;
+    background-color: transparent;
+    transition: box-shadow 0.3s ease;
+    inline-size: 130px;
+    block-size: 38px;
+  }
+
+  .save__button {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    margin-bottom: 100px;
+    padding: 17px 21px;
+    outline: 2px solid var(--acent-color);
+    background-color: #fff;
+    inline-size: clamp(19.125rem, 2.723vw + 18.487rem, 20.938rem);
+    white-space: nowrap;
+  }
+
+  .floopy__image {
+    color: #fff;
+    inline-size: 21px;
+    block-size: 21px;
+    mix-blend-mode: difference;
+  }
+
+  .dialog__save-open {   
+    inline-size: clamp(21.313rem, 1.127vw + 21.048rem, 22.063rem);
+  }
+
+  .dialog__save-open[open] {
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    align-items: center;
+    gap: 10px;
+  }
+
+  .dialog__form {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    margin: 20px;
+    
+  }
+
+  .dialog__save-open .floopy__image {
+    inline-size: 39px;
+    block-size: 39px;
+  }
+
+
+  .button__dialog {
+    padding: 9px 17px;
+    outline: 2px solid var(--acent-color);
+    text-transform: uppercase;
+    background-color: transparent;
+    inline-size: clamp(16.063rem, 3.38vw + 15.27rem, 18.313rem);
+    block-size: 38px;
+  }
+
+  .dialog__text {
+    color: var(--acent-color);
+    font-family: var(--second-family);
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 150%;
+    text-transform: uppercase;
+  }
+
+  .dialog__save-open[open]::backdrop {
+    opacity: 0.75;
+    background: var(--acent-color);
+  }
+
+  
+
+  @supports(text-stroke: 0.5px var(--color-outline-watermark)) or (-webkit-text-stroke: 0.5px var(--color-outline-watermark)) {
+    .watermark {
+      text-shadow: 0px 0px 0.5px var(--color-outline-watermark);
+      -webkit-text-stroke: 0.5px var(--color-outline-watermark);
+      text-stroke: 0.5px var(--color-outline-watermark);
+    }
+  } 
+  
+
+  @media (width <= 375px) {
+
+    .header {
+      margin-bottom: 103px;
+    }
+
+    .header__size {
+      inline-size: 100%;
+    }
+
+    .post__size {
+      inline-size: 100%;
+    }
+
+
+    .watermark {
+      position: absolute;
+      top: 25px;
+      right: 13px;
+    }
+
+    .content {
+      padding: 25px 28.9px 25px; 
+    }
+
+    .save__button {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 8px;
+      margin-right: 35px;
+      margin-left: 35px;
+      padding: 15px 20px;
+      white-space: nowrap;
+    }
+
+    .floopy__image {
+      inline-size: 28px;
+      block-size: 28px;
+  }
 }
