--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,1 +1,16 @@
 /* В этом файле будут храниться все значения переменных в исходном состоянии, а так же их изменения в зависимости от ширины устройства */
+
+:root {
+  --font-family-base: "Inter-Variable";
+  --second-family: 'PressSrart2';
+  --inline-size: clamp(375px, 100%, 696px);
+  --color-outline-watermark: #fff;
+  --font-size-logo: clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem);
+  --font-size-text: clamp(0.875rem, 0.6769rem + 0.8451vw, 1.4375rem);
+  --background-image: repeating-linear-gradient(to right, #d3d3d3 0 2px, transparent 2px 4px),
+  repeating-linear-gradient(to bottom, #d3d3d3 0 2px, transparent 2px 4px),
+  linear-gradient(#e7e7e7 0%, #e7e7e7 0.1%, #1a1a1a 100%);
+  --color-contour: #000;
+  --color-sparks: #f00;
+  --acent-color: #000;
+}
