--- a/styles/style.css
+++ b/styles/style.css
@@ -19,7 +19,7 @@
   background-image: var(--background-image);
   background-size: cover;
   background-attachment: fixed;
-  font-variation-settings: 'wdth' 400;
+  font-variation-settings: 'wght' 400;
   min-inline-size: 320px;
   min-block-size: 100dvb;
 }
@@ -81,7 +81,7 @@
     color: var(--acent-color);
     font-family: var(--font-family-base);
     font-size: 18px;
-    font-variation-settings: 'wdth' 700;
+    font-variation-settings: 'wght' 700;
   }
 
   .image__container {
@@ -160,7 +160,7 @@
   .post__text {
     color: var(--acent-color);
     font-family: var(--font-family-base);
-    font-variation-settings: 'wdth' 400;
+    font-variation-settings: 'wght' 400;
     font-size: 18px;
     line-height: 21px;
   }
@@ -253,14 +253,12 @@
   }
 
   .save__button {
-    display: flex;
-    align-items: center;
-    gap: 8px;
+    display: inline-block;
     margin-bottom: 100px;
     padding: 17px 21px;
     outline: 2px solid var(--acent-color);
     background-color: #fff;
-    inline-size: clamp(19.125rem, 2.723vw + 18.487rem, 20.938rem);
+    inline-size: 335px;
     white-space: nowrap;
   }
 
@@ -290,7 +288,6 @@
     align-items: center;
     gap: 20px;
     margin: 20px;
-    
   }
 
   .dialog__save-open .floopy__image {
@@ -363,8 +360,6 @@
       flex-direction: column;
       align-items: center;
       gap: 8px;
-      margin-right: 35px;
-      margin-left: 35px;
       padding: 15px 20px;
       white-space: nowrap;
     }
