--- a/styles/style.css
+++ b/styles/style.css
@@ -14,7 +14,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  font-family: var(--font-family-base);
+  font-family: var(--font-family-base), fantasy, sans-serif;
   background-color: #fff;
   background-image: var(--background-image);
   background-size: cover;
@@ -79,7 +79,7 @@
     border-bottom: 2px solid var(--acent-color);
     padding: 5px 10px;
     color: var(--acent-color);
-    font-family: var(--font-family-base);
+    font-family: var(--font-family-base), fantasy, sans-serif;;
     font-size: 18px;
     font-variation-settings: 'wght' 700;
   }
@@ -96,12 +96,11 @@
     z-index: 1;
     opacity: 0.5;
     color: var(--acent-color);
-    font-family: var(--second-family);
+    font-family: var(--second-family), sans-serif;
     font-weight: 400;
     font-size: 14px;
+    text-shadow: 0px 0px 0.5px var(--color-outline-watermark);
     mix-blend-mode: hard-light;
-    -webkit-text-stroke: 0.5px var(--color-outline-watermark);
-    text-stroke: 0.5px var(--color-outline-watermark);
   }
 
   .post__image {
@@ -159,10 +158,10 @@
 
   .post__text {
     color: var(--acent-color);
-    font-family: var(--font-family-base);
-    font-variation-settings: 'wght' 400;
+    font-family: var(--font-family-base), fantasy, sans-serif;
     font-size: 18px;
-    line-height: 21px;
+    line-height: 21px;;
+    font-variation-settings: 'wght' 400;
   }
 
   .button_case {
@@ -175,13 +174,15 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    gap: 5px;
   }
 
   .card__icon-button {
     position: relative;
     border: none;
     background-color: transparent;
-    block-size: 38px;
+    transition: outline 0.3s ease;
+    block-size: 35px;
   }
 
   .card__icon-button:focus {
@@ -190,7 +191,6 @@
 
   .card__icon-button:focus-visible {
     outline: 2px solid var(--acent-color);
-    transition: outline 0.3s ease;
   }
 
 
@@ -199,11 +199,12 @@
     border: none;
     overflow: hidden;
     color: var(--acent-color);
-    font-family: var(--second-family);
+    font-family: var(--second-family), sans-serif;
     font-weight: 400;
     font-size: 14px;
     line-height: 90%;
     background-color: transparent;
+    transition: box-shadow 0.3s ease;
   }
 
   .button__text {
@@ -214,12 +215,11 @@
   }
 
   .button:focus {
-    border: none;
+    box-shadow: 2px 2px 0px var(--acent-color);
   }
 
   .button:focus-visible {
     box-shadow: 2px 2px 0px var(--acent-color);
-    transition: box-shadow 0.3s ease;
   }
 
   .button::before {
@@ -239,21 +239,20 @@
   } 
 
   .card__like-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border: 2px solid var(--acent-color);
-    padding: 12.5px 37px;
-    color: var(--acent-color);
-    font-family: var(--second-family);
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 90%;
-    background-color: transparent;
-    transition: box-shadow 0.3s ease;
+    outline: none;
     inline-size: 130px;
     block-size: 38px;
   }
 
   .save__button {
-    display: inline-block;
+    display: inline-flex;
+    align-items: baseline;
+    gap: 8px;
+    margin-top: 2px;
     margin-bottom: 100px;
     padding: 17px 21px;
     outline: 2px solid var(--acent-color);
@@ -307,7 +306,7 @@
 
   .dialog__text {
     color: var(--acent-color);
-    font-family: var(--second-family);
+    font-family: var(--second-family), sans-serif;
     font-weight: 400;
     font-size: 14px;
     line-height: 150%;
@@ -323,7 +322,7 @@
 
   @supports(text-stroke: 0.5px var(--color-outline-watermark)) or (-webkit-text-stroke: 0.5px var(--color-outline-watermark)) {
     .watermark {
-      text-shadow: 0px 0px 0.5px var(--color-outline-watermark);
+      text-shadow: none;
       -webkit-text-stroke: 0.5px var(--color-outline-watermark);
       text-stroke: 0.5px var(--color-outline-watermark);
     }
@@ -362,6 +361,7 @@
       gap: 8px;
       padding: 15px 20px;
       white-space: nowrap;
+      inline-size: 306px;
     }
 
     .floopy__image {
